--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
       text-align: center;
       font-family: 'Bowlby One SC', cursive;
       font-size: 5.5vw;
+      padding: 6vw 0 0 0;
     }
   </style>
 </body>
